--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,71 +1,76 @@
-homeassistant:
-  # Name of the location where Home Assistant is running
-  name: Home
-  # Location required to calculate the time the sun rises and sets
-  latitude: 0
-  longitude: 0
-  # Impacts weather/sunrise data (altitude above sea level in meters)
-  elevation: 0
-  # metric for Metric, imperial for Imperial
-  unit_system: metric
-  # Pick yours from here: http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-  time_zone: UTC
-  # Customization file
-  customize: !include customize.yaml
+automation: !include automations.yaml
+automation old: !include_dir_list automations
 
-# Show links to resources in log and frontend
-introduction:
+cloud:
 
-# Enables the frontend
-frontend:
-
-# Enables configuration UI
 config:
 
-http:
-  # Secrets are defined in the file secrets.yaml
-  api_password: !secret http_password
-  # Uncomment this if you are using SSL/TLS, running in Docker container, etc.
-  # base_url: example.duckdns.org:8123
+cover: 
+  platform: myq
+  username: !secret myq_username
+  password: !secret myq_password
+  type: chamberlain
 
-# Checks for available updates
-# Note: This component will send some information about your system to
-# the developers to assist with development of Home Assistant.
-# For more information, please see:
-# https://home-assistant.io/blog/2016/10/25/explaining-the-updater/
-updater:
-  # Optional, allows Home Assistant developers to focus on popular components.
-  # include_used_components: true
-
-# Discover some devices automatically
 discovery:
 
-# Allows you to issue voice commands from the frontend in enabled browsers
-conversation:
+ecobee:
+  api_key: !secret ecobee_api_key 
 
-# Enables support for tracking state changes over time
+frontend:
+
+group: !include groups.yaml
+
 history:
 
-# View all events in a logbook
+http:
+  api_password: !secret http_api_password 
+  base_url: !secret http_base_url
+  ip_ban_enabled: true
+  login_attempts_threshold: 10
+  trusted_proxies: !secret http_trusted_proxies
+  use_x_forwarded_for: true
+
+homeassistant:
+  customize: !include customize.yaml
+  elevation: !secret homeassistant_elevation
+  latitude: !secret homeassistant_latitude
+  longitude: !secret homeassistant_longitude
+  name: Home
+  time_zone: !secret homeassistant_time_zone
+  unit_system: imperial
+
 logbook:
 
-# Enables a map showing the location of tracked devices
+logger: 
+  # Severities: critical, fatal, error, warning, warn, info, debug, notset
+  default: error
+  logs:
+    homeassistant.core: warning
+    homeassistant.components.notify: debug
+    homeassistant.components.automation: debug
+
 map:
 
-# Track the sun
-sun:
+notify: 
+  - platform: pushbullet
+    name: Pushbullet
+    api_key: !secret pushbullet_api_key  
 
-# Weather prediction
+recorder:
+  purge_keep_days: 14
+  exclude:
+    entities:
+      - media_player.galaxy_s7
+
 sensor:
   - platform: yr
 
-# Text to speech
+script: !include scripts.yaml
+
+sun:
+
 tts:
   - platform: google
 
-# Cloud
-cloud:
-
-group: !include groups.yaml
-automation: !include automations.yaml
-script: !include scripts.yaml
+updater:
+  include_used_components: true
