Fix fake timezone
Revert customize comment

--- a/.travis_secrets.yaml
+++ b/.travis_secrets.yaml
@@ -2,7 +2,7 @@ ecobee_api_key: key
 homeassistant_elevation: 0
 homeassistant_latitude: 0.0
 homeassistant_longitude: 0.0
-homeassistant_time_zone: America/Honolulu
+homeassistant_time_zone: Pacific/Honolulu
 http_api_password: password
 http_base_url: http://hass.io
 http_trusted_proxies: 0.0.0.0
