--- a/.travis_secrets.yaml
+++ b/.travis_secrets.yaml
@@ -1,11 +1,22 @@
+camera_1_url: localhost
+camera_2_url: localhost
+camera_3_url: localhost
+camera_4_url: localhost
+
+cams_url: localhost
+configurator_url: localhost
+nvr_url: localhost
+
 ecobee_api_key: key
 homeassistant_elevation: 0
 homeassistant_latitude: 0.0
 homeassistant_longitude: 0.0
 homeassistant_time_zone: Pacific/Honolulu
 http_api_password: password
-http_base_url: http://hass.io
+http_base_url: http://localhost
 http_trusted_proxies: 0.0.0.0
 myq_password: password
 myq_username: user
 pushbullet_api_key: key
+recorder_db_url: mysql://localhost
+ssl_cert_check_command: "ssl-cert-check.sh -b -c redacted/cert.pem | awk '{ print $NF }'"
