--- a/.travis_secrets.yaml
+++ b/.travis_secrets.yaml
@@ -6,8 +6,11 @@ camera_4_url: localhost
 cams_url: localhost
 configurator_url: localhost
 nvr_url: localhost
+pihole_url: localhost
 
 ecobee_api_key: key
+google_assistant_project_id: id
+google_assistant_api_key: key
 homeassistant_elevation: 0
 homeassistant_latitude: 0.0
 homeassistant_longitude: 0.0
@@ -17,6 +20,9 @@ http_base_url: http://localhost
 http_trusted_proxies: 0.0.0.0
 myq_password: password
 myq_username: user
+pihole_command_on: "curl -X GET localhost"
+pihole_command_off: "curl -X GET localhost"
+plex_token: token
 pushbullet_api_key: key
 recorder_db_url: mysql://localhost
 ssl_cert_check_command: "ssl-cert-check.sh -b -c redacted/cert.pem | awk '{ print $NF }'"
