--- a/.travis_secrets.yaml
+++ b/.travis_secrets.yaml
@@ -1,12 +1,12 @@
-camera_1_url: localhost
-camera_2_url: localhost
-camera_3_url: localhost
-camera_4_url: localhost
+camera_1_url: http://localhost
+camera_2_url: http://localhost
+camera_3_url: http://localhost
+camera_4_url: http://localhost
 
-cams_url: localhost
-configurator_url: localhost
-nvr_url: localhost
-pihole_url: localhost
+cams_url: http://localhost
+configurator_url: http://localhost
+nvr_url: http://localhost
+pihole_url: http://localhost
 
 ecobee_api_key: key
 google_assistant_project_id: id
@@ -20,8 +20,8 @@ http_base_url: http://localhost
 http_trusted_proxies: 0.0.0.0
 myq_password: password
 myq_username: user
-pihole_command_on: "curl -X GET localhost"
-pihole_command_off: "curl -X GET localhost"
+pihole_command_on: "curl -X GET http://localhost"
+pihole_command_off: "curl -X GET http://localhost"
 plex_token: token
 pushbullet_api_key: key
 recorder_db_url: mysql://localhost
