Update to 0.107.5 Fix garage door! Use service account with google assistant Remove http: section Update LG TV to webostv component Remove manual configurator button Add tplink and system_health configs Remove bad items from customize.yaml and groups.yaml

--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,6 @@ entity_registry.yaml
 secrets.yaml
 .coud
 .cloud/production_auth.json
+.google_service_account.json
 /tts/*
 www/images/snapshot_cam_*.jpg
