--- a/.travis_secrets.yaml
+++ b/.travis_secrets.yaml
@@ -11,6 +11,7 @@ pihole_url: http://localhost
 ecobee_api_key: key
 google_assistant_project_id: id
 google_assistant_api_key: key
+google_assistant_secure_devices_pin: 0000
 homeassistant_elevation: 0
 homeassistant_latitude: 0.0
 homeassistant_longitude: 0.0
